--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,8 @@ body{
     line-height: 50px;
   }
   .header__subtitle{
-    font-size: 12pt;
+    font-size: 11pt;
+    line-height: 25px;
     margin: 0;
   }
 
@@ -180,7 +181,7 @@ body{
 
   .rates{
     width: 540px;
-    padding-top: 40px;
+    padding-top: 27px;
     margin: 0;
   }
 
