--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ body{
   }
   .header__subtitle{
     font-size: 11pt;
+    width: 450px;
     line-height: 25px;
     margin: 0;
   }
@@ -206,4 +207,5 @@ body{
   .testimonial--third{
     margin-top: 32px;
   }
+
 }
